# BuzzBoard

./: .gitmodules  README.md
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/api/v1/routers/: categories.py  comments.py  login.py  posts.py  reactions.py  register.py  users.py
backend/core/: config.py  storage.py
backend/core/authentication/: auth_middleware.py  auth_token.py  hashing.py  role.py
backend/schemas/: categories.py  comments.py  posts.py  reactions.py  token.py  user.py
backend/services/: mailer.py  mongo_storage.py
frontend/: README.md  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/sign-in/: page.tsx
frontend/src/components/: CloseModal.tsx  CommentVotes.tsx  CreateComment.tsx  Editor.tsx  Icons.tsx  Navbar.tsx  Post.tsx  PostFeed.tsx  SearchBar.tsx  SignIn.tsx  SignUp.tsx  Signup.tsx  SubscribeLeaveToggle.tsx  ToFeedButton.tsx  UserAccountNav.tsx  UserAuthForm.tsx  UserAvatar.tsx  UserForm.tsx
frontend/src/components/comments/: PostComment.tsx
frontend/src/components/homepage/: CustomFeed.tsx  GeneralFeed.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: auth.ts
frontend/src/lib/validators/: buzz.ts  post.ts
frontend/src/types/: db.d.ts
streamlit/: .env  index.py  pages.toml
streamlit/callbacks/: categories.py  comment.py  posts.py  reaction.py  user.py
streamlit/elements/: comments.py  posts.py
streamlit/pages/: create_post.py  display_post.py  login.py  sign_up.py  verify_email.py
(+16 files in other folders)
